force-app/main/default/objects/Invoice_Line_Item__c/fields/Amount_per_mile__c.field-meta.xml
<CustomField>
    <fullName>Amount_per_mile__c</fullName>
    <label>Amount per mile</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>