force-app/main/default/objects/Invoice_Line_Item__c/fields/Description_of_expense__c.field-meta.xml
<CustomField>
    <fullName>Description_of_expense__c</fullName>
    <description>Describe the nature of the expense</description>
    <label>Description of expense</label>
    <length>100</length>
    <type>Text</type>
</CustomField>