force-app/main/default/objects/Invoice_Line_Item__c/fields/Miles_driven__c.field-meta.xml
<CustomField>
    <fullName>Miles_driven__c</fullName>
    <label>Miles driven</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>