force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Date_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_greater_than_today</fullName>
    <active>true</active>
    <description>Date for line item must be in the past</description>
    <errorConditionFormula>Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date must be in the past.</errorMessage>
</ValidationRule>